--- a/_config.yml
+++ b/_config.yml
@@ -97,8 +97,8 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-#theme: landscape
-theme: very-simple
+theme: landscape
+#theme: very-simple
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
