--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,9 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: .vitepress/dist
-
+      - name: Override old upload-artifact
+        uses: actions/upload-artifact@v4
+        if: false
   # 部署工作
   deploy:
     environment:
